# ansiventory-ui

./: .dockerignore  .env.example  .gitignore  README.md  ansiventory-ui  docker-compose.yml  main.py  migrate_inventory.py  pyproject.toml  setup_structure.sh
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/models/: models.py
backend/app/routers/: grupos.py  hosts.py  inventory.py  tokens.py  vault.py
backend/app/schemas/: schemas.py
docker/postgres/conf/: postgresql.conf
docker/postgres/init/: 01_extensions.sql  02_roles.sql
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.json  tsconfig.server.json
frontend/.nuxt/dev/: index.mjs  index.mjs.map
frontend/.nuxt/manifest/: latest.json
frontend/.nuxt/tailwind/: postcss.mjs
frontend/.nuxt/types/: build.d.ts  components.d.ts  imports.d.ts  layouts.d.ts  nitro-imports.d.ts  plugins.d.ts  schema.d.ts
frontend/assets/css/: main.css
frontend/components/hosts/: AddVarModal.vue  (+2 more)
frontend/composables/: useApi.ts
frontend/layouts/: auth.vue  default.vue
frontend/middleware/: auth.ts
frontend/pages/: grupos.vue  index.vue  login.vue  settings.vue  vault.vue
frontend/plugins/: auth.client.ts
frontend/stores/: auth.ts
frontend/types/: index.ts
infra/k8s/: Relatório de Avaliação de Segurança.md  argocd-app.yaml  external-secret.yaml  ingress.yaml  namespace.yaml
(+8 files in other folders)
