[project]
name = "ansiventory-ui"
version = "0.1.0"
description = "Inventário dinâmico Ansible com backend PostgreSQL e interface web"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "sqlalchemy[asyncio]==2.0.35",
    "uvicorn[standard]==0.30.6",
]
